[package]
name = "actix-web-oauth2-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
handlebars = "5.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
oauth2 = "4.4.2"
url = "2.5.0"
stderrlog = "0.6.0"
log = "0.4.21"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
reqwest = { version = "0.12.3", features = ["json"] }
anyhow = "1.0.82"